--- a/week_3_newton_fixed_pt.ipynb
+++ b/week_3_newton_fixed_pt.ipynb
@@ -8,6 +8,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import seaborn as sns\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,10 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def newton_iteration(f, fder, x0, eps=1e-5, maxiter=1000):\n",
@@ -49,7 +57,16 @@
     "    niter : int\n",
     "        The number of iterations.\n",
     "    \"\"\"\n",
-    "    # ... ENTER YOUR CODE HERE ..."
+    "    x = x0\n",
+    "    i = -1\n",
+    "    while True:\n",
+    "        i += 1\n",
+    "        der = fder(x)\n",
+    "        step = f(x) / fder(x)\n",
+    "        if ((abs(step) <= abs(eps * x)) or (i > maxiter)):\n",
+    "            return (x, i)\n",
+    "        else:\n",
+    "            x -= step "
    ]
   },
   {
@@ -63,13 +80,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(-1.0000052895642693, 6)"
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# ... ENTER YOUR CODE HERE ..."
+    "def f(x):\n",
+    "    return x ** 2 - 1\n",
+    "def fder(x):\n",
+    "    return 2 * x\n",
+    "\n",
+    "#true_result = 1\n",
+    "newton_iteration(f, fder, -10)"
    ]
   },
   {
@@ -89,13 +119,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# ... ENTER YOUR CODE HERE ..."
+    "def mod_newton(f, fder, x0, m=1, eps=1e-5, maxiter=1000):\n",
+    "    \"\"\"Find a root of $f(x) = 0$ via Newton's iteration starting from x0.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    f : callable\n",
+    "        The function to find a root of.\n",
+    "    fder : callable\n",
+    "        The derivative of `f`.\n",
+    "    x0 : float\n",
+    "        Initial value for the Newton's iteration.\n",
+    "    m : integer\n",
+    "        Integer constant for modification of Newton's iteration.\n",
+    "    eps : float\n",
+    "        The target accuracy. \n",
+    "        The iteration stops when the distance between successive iterates is below `eps`.\n",
+    "        Default is 1e-5.\n",
+    "    maxiter : int\n",
+    "        The maximum number of iterations (default is 1000.)\n",
+    "        Iterations terminate if the number of iterations exceeds `maxiter`.\n",
+    "        This parameter is only needed to avoid infinite loops if iterations wander off.\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    x : float\n",
+    "        The estimate for the root.\n",
+    "    niter : int\n",
+    "        The number of iterations.\n",
+    "    \"\"\"\n",
+    "    x = x0\n",
+    "    i = -1\n",
+    "    while True:\n",
+    "        i += 1\n",
+    "        der = fder(x)\n",
+    "        step = f(x) / fder(x)\n",
+    "        if ((abs(step) <= abs(eps * x)) or (i > maxiter)):\n",
+    "            return (x, i)\n",
+    "        else:\n",
+    "            x -= m * step "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Начальное условие x_0 = -4.99999, m = 1\nКорень: -1.0000114752884501, число итераций 21\n\nНачальное условие x_0 = -3.9999900000000004, m = 1\nКорень: -1.0000130819391237, число итераций 20\n\nНачальное условие x_0 = -2.9999900000000004, m = 1\nКорень: -1.0000123834638333, число итераций 19\n\nНачальное условие x_0 = -1.9999900000000004, m = 1\nКорень: -1.000015658949842, число итераций 17\n\nНачальное условие x_0 = -0.9999900000000004, m = 1\nКорень: -0.9999900000000004, число итераций 0\n\nНачальное условие x_0 = 9.999999999621423e-06, m = 1\nКорень: 1.0000182207724804, число итераций 51\n\nНачальное условие x_0 = 1.0000099999999996, m = 1\nКорень: 1.0000099999999996, число итераций 0\n\nНачальное условие x_0 = 2.0000099999999996, m = 1\nКорень: 1.0000156594342688, число итераций 17\n\nНачальное условие x_0 = 3.0000099999999996, m = 1\nКорень: 1.000012383684002, число итераций 19\n\nНачальное условие x_0 = 4.00001, m = 1\nКорень: 1.000013082105715, число итераций 20\n\nНачальное условие x_0 = -4.99999, m = 2\nКорень: -1.0000046355271734, число итераций 5\n\nНачальное условие x_0 = -3.9999900000000004, m = 2\nКорень: -1.0000001591664436, число итераций 5\n\nНачальное условие x_0 = -2.9999900000000004, m = 2\nКорень: -1.000000000465624, число итераций 5\n\nНачальное условие x_0 = -1.9999900000000004, m = 2\nКорень: -1.0000000464561918, число итераций 4\n\nНачальное условие x_0 = -0.9999900000000004, m = 2\nКорень: -0.9999900000000004, число итераций 0\n\nНачальное условие x_0 = 9.999999999621423e-06, m = 2\nКорень: 1.0000000015603232, число итераций 20\n\nНачальное условие x_0 = 1.0000099999999996, m = 2\nКорень: 1.0000099999999996, число итераций 0\n\nНачальное условие x_0 = 2.0000099999999996, m = 2\nКорень: 1.0000000464661034, число итераций 4\n\nНачальное условие x_0 = 3.0000099999999996, m = 2\nКорень: 1.0000000004656986, число итераций 5\n\nНачальное условие x_0 = 4.00001, m = 2\nКорень: 1.0000001591800265, число итераций 5\n\nНачальное условие x_0 = -4.99999, m = 3\nКорень: -1.000015520358678, число итераций 15\n\nНачальное условие x_0 = -3.9999900000000004, m = 3\nКорень: -0.9999812906813804, число итераций 14\n\nНачальное условие x_0 = -2.9999900000000004, m = 3\nКорень: -0.9999983333361113, число итераций 1\n\nНачальное условие x_0 = -1.9999900000000004, m = 3\nКорень: -1.000017129922424, число итераций 14\n\nНачальное условие x_0 = -0.9999900000000004, m = 3\nКорень: -0.9999900000000004, число итераций 0\n\nНачальное условие x_0 = 9.999999999621423e-06, m = 3\nКорень: 1.000013616022014, число итераций 23\n\nНачальное условие x_0 = 1.0000099999999996, m = 3\nКорень: 1.0000099999999996, число итераций 0\n\nНачальное условие x_0 = 2.0000099999999996, m = 3\nКорень: 1.000017129733224, число итераций 14\n\nНачальное условие x_0 = 3.0000099999999996, m = 3\nКорень: 1.0000016666694442, число итераций 1\n\nНачальное условие x_0 = 4.00001, m = 3\nКорень: 0.9999812903623139, число итераций 14\n\n"
+    }
+   ],
+   "source": [
+    "def f_2(x):\n",
+    "    return (x ** 2 - 1) ** 2\n",
+    "def fder_2(x):\n",
+    "    return (2 * (x ** 2 - 1) * 2 * x)\n",
+    "for i in range(1, 4):\n",
+    "    for j in np.arange(-5 + 1e-5, 5):\n",
+    "        print('Начальное условие x_0 = {}, m = {}'.format(j, i))\n",
+    "        print('Корень: {}, число итераций {}\\n'.format(mod_newton(f_2, fder_2, j, i)[0],mod_newton(f_2, fder_2, j, i)[1]))"
    ]
   },
   {
@@ -193,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
