--- a/week_1_quadratic.ipynb
+++ b/week_1_quadratic.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,10 +34,12 @@
     "    x1, x2 : float or complex\n",
     "       Roots.\n",
     "    \"\"\"\n",
-    "    D = b ** 2 - 4 * c\n",
-    "    x1 = (-b + sqrt(D)) / 2\n",
-    "    x2 = (-b - sqrt(D)) / 2\n",
-    "    \n",
+    "    if (b > 0):\n",
+    "       x1 = - (b + abs(b) * sqrt(1 - 4 * c / (b ** 2))) / 2\n",
+    "       x2 = c / x1\n",
+    "    else:\n",
+    "       x1 = (-b + abs(b) * sqrt(1 - 4 * c / (b ** 2))) / 2\n",
+    "       x2 = c / x1\n",
     "    return x1, x2\n",
     "    "
    ]
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,19 +79,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "(-1+0j) (-3+0j)\nTrue\n(-1+0j) (-1+0j)\nTrue\n(-0.25+1.984313483298443j) (-0.25-1.984313483298443j)\nTrue\n0j (-10000000000+0j)\nFalse\n(-0+0j) (10000000000-0j)\nFalse\n"
+     "text": "True\nTrue\nTrue\nTrue\nTrue\n"
     }
    ],
    "source": [
     "for var in variants:\n",
     "    x1, x2 = solve_quad(**var)\n",
-    "    print(x1, x2)\n",
     "    print(allclose(x1*x2, var['c']))"
    ]
   },
