--- a/week_1_quadratic.ipynb
+++ b/week_1_quadratic.ipynb
@@ -16,26 +16,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import math\n",
+    "import cmath\n",
     "def solve_quad(b, c):\n",
-    "    \"\"\"Solve a quadratic equation, x**2 + bx + c = 0.\n",
+    "   if abs(b-c) < 1e9:\n",
+    "      x1 = (-abs(b) + cmath.sqrt(b**2 - 4*c))/2\n",
+    "      x2 = (-abs(b) - cmath.sqrt(b**2 - 4*c))/2\n",
+    "   else:\n",
+    "      x1 = (-abs(b) + abs(b)-2*c/abs(b))/2\n",
+    "      x2 = (-abs(b)- abs(b)-2*c/abs(b))/2\n",
+    "   return x1, x2\n",
     "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    b, c : float\n",
-    "       Coefficients\n",
-    "       \n",
-    "    Returns\n",
-    "    -------\n",
-    "    x1, x2 : float or complex\n",
-    "       Roots.\n",
-    "    \"\"\"\n",
-    "    # ... enter your code here ..."
+    "    \n"
    ]
   },
   {
@@ -51,10 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from numpy import allclose"
@@ -62,10 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "variants = [{'b': 4.0, 'c': 3.0},\n",
@@ -77,11 +70,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "True\nTrue\nTrue\nTrue\nTrue\n"
+    }
+   ],
    "source": [
     "for var in variants:\n",
     "    x1, x2 = solve_quad(**var)\n",
@@ -114,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
