--- a/week_1_LU_pivoting.ipynb
+++ b/week_1_LU_pivoting.ipynb
@@ -287,7 +287,7 @@
     "\n",
     "            lam[j+1:, j] = gamma\n",
     "            L = L @ lam\n",
-    "    P = np.linalg.solve(L@u, a)\n",
+    "    P = np.linalg.solve(L@u, a) # Can I use it or not?\n",
     "    return L, u, P\n",
     "\n",
     "\n",
