--- a/week_1_LU_pivoting.ipynb
+++ b/week_1_LU_pivoting.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
      "data": {
       "text/plain": "6"
      },
-     "execution_count": 69,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -160,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "6"
      },
-     "execution_count": 73,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -252,20 +252,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "[[1.    0.    0.    0.    0.    0.   ]\n [1.    1.    0.    0.    0.    0.   ]\n [1.    1.455 1.    0.    0.    0.   ]\n [1.    1.714 1.742 1.    0.    0.   ]\n [1.    1.882 2.276 2.039 1.    0.   ]\n [1.    2.    2.671 2.944 2.354 1.   ]] \n\n[[ 3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00]\n [ 0.000e+00 -1.125e+00 -1.636e+00 -1.929e+00 -2.118e+00 -2.250e+00]\n [ 0.000e+00  0.000e+00  2.625e-01  4.574e-01  5.975e-01  7.013e-01]\n [ 0.000e+00  1.110e-16  0.000e+00 -2.197e-02 -4.480e-02 -6.469e-02]\n [ 0.000e+00 -2.819e-16  0.000e+00  0.000e+00  8.080e-04  1.902e-03]\n [ 0.000e+00  3.369e-16  0.000e+00 -1.541e-18  2.168e-19 -1.585e-05]] \n\n[[ 1.000e+00 -2.294e-15 -1.163e-16  1.190e-14 -1.950e-14 -3.022e-16]\n [-0.000e+00  1.000e+00  2.115e-15 -2.275e-12  4.078e-12  6.465e-14]\n [-0.000e+00 -9.134e-12  1.000e+00  2.774e-11 -5.061e-11 -7.918e-13]\n [ 0.000e+00  3.201e-11  8.436e-14  1.000e+00  1.745e-10  2.706e-12]\n [-0.000e+00 -4.136e-11 -1.076e-13  1.210e-10  1.000e+00 -3.446e-12]\n [ 0.000e+00  1.777e-11  4.585e-14 -5.156e-11  9.544e-11  1.000e+00]] \n\n[[1.    0.    0.    0.    0.    0.   ]\n [1.    1.    0.    0.    0.    0.   ]\n [1.    1.294 1.    0.    0.    0.   ]\n [1.    1.435 1.594 1.    0.    0.   ]\n [1.    1.517 1.973 1.915 1.    0.   ]\n [1.    1.571 2.234 2.653 2.251 1.   ]] \n\n[[ 3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00]\n [ 0.000e+00 -1.636e+00 -1.929e+00 -2.118e+00 -2.250e+00  0.000e+00]\n [ 0.000e+00  0.000e+00  1.480e-01  2.577e-01  3.403e-01 -1.636e+00]\n [ 0.000e+00 -9.742e-17  0.000e+00 -6.534e-03 -1.415e-02  6.794e-01]\n [ 0.000e+00  1.379e-16  0.000e+00  0.000e+00  1.525e-04 -1.903e-01]\n [ 0.000e+00 -5.186e-17  0.000e+00  2.810e-20  0.000e+00  3.202e-02]] \n\n[[ 1.000e+00 -4.318e-16  1.406e-15  2.208e-16  5.848e-17  3.290e-15]\n [-0.000e+00  7.336e-13  1.000e+00  2.783e-14 -1.397e-13 -2.063e-12]\n [-0.000e+00 -3.969e-12  7.441e-12  1.000e+00  7.456e-13  1.048e-11]\n [ 0.000e+00  6.308e-12 -1.166e-11  2.328e-13  1.000e+00 -1.599e-11]\n [-0.000e+00 -3.069e-12  5.617e-12 -1.122e-13  5.661e-13  1.000e+00]\n [-0.000e+00  1.000e+00  4.868e-15 -9.720e-17  4.906e-16  2.729e-15]] \n\n"
+     "text": "[[1.    0.    0.    0.    0.    0.   ]\n [1.    1.    0.    0.    0.    0.   ]\n [1.    1.455 1.    0.    0.    0.   ]\n [1.    1.714 1.742 1.    0.    0.   ]\n [1.    1.882 2.276 2.039 1.    0.   ]\n [1.    2.    2.671 2.944 2.354 1.   ]] \n\n[[ 3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00]\n [ 0.000e+00 -1.125e+00 -1.636e+00 -1.929e+00 -2.118e+00 -2.250e+00]\n [ 0.000e+00  0.000e+00  2.625e-01  4.574e-01  5.975e-01  7.013e-01]\n [ 0.000e+00  1.110e-16  0.000e+00 -2.197e-02 -4.480e-02 -6.469e-02]\n [ 0.000e+00 -2.819e-16  0.000e+00  0.000e+00  8.080e-04  1.902e-03]\n [ 0.000e+00  3.369e-16  0.000e+00 -1.541e-18  2.168e-19 -1.585e-05]] \n\n[[1. 0. 0. 0. 0. 0.]\n [0. 1. 0. 0. 0. 0.]\n [0. 0. 1. 0. 0. 0.]\n [0. 0. 0. 1. 0. 0.]\n [0. 0. 0. 0. 1. 0.]\n [0. 0. 0. 0. 0. 1.]] \n\n[[1.    0.    0.    0.    0.    0.   ]\n [1.    1.    0.    0.    0.    0.   ]\n [1.    1.294 1.    0.    0.    0.   ]\n [1.    1.435 1.594 1.    0.    0.   ]\n [1.    1.517 1.973 1.915 1.    0.   ]\n [1.    1.571 2.234 2.653 2.251 1.   ]] \n\n[[ 3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00]\n [ 0.000e+00 -1.636e+00 -1.929e+00 -2.118e+00 -2.250e+00  0.000e+00]\n [ 0.000e+00  0.000e+00  1.480e-01  2.577e-01  3.403e-01 -1.636e+00]\n [ 0.000e+00 -9.742e-17  0.000e+00 -6.534e-03 -1.415e-02  6.794e-01]\n [ 0.000e+00  1.379e-16  0.000e+00  0.000e+00  1.525e-04 -1.903e-01]\n [ 0.000e+00 -5.186e-17  0.000e+00  2.810e-20  0.000e+00  3.202e-02]] \n\n[[1. 0. 0. 0. 0. 0.]\n [0. 0. 1. 0. 0. 0.]\n [0. 0. 0. 1. 0. 0.]\n [0. 0. 0. 0. 1. 0.]\n [0. 0. 0. 0. 0. 1.]\n [0. 1. 0. 0. 0. 0.]] \n\n"
     }
    ],
    "source": [
     "def diy_lu_mod(a):\n",
     "    N = a.shape[0]\n",
-    "    P = np.zeros(a.shape)\n",
-    "\n",
+    "    Per = np.eye(N)\n",
     "    u = a.copy()\n",
     "    L = np.eye(N)\n",
     "    det = np.linalg.det(a)\n",
@@ -275,10 +274,13 @@
     "        for j in range(N-1):\n",
     "            dj = np.linalg.det(u[:j+2,:j+2])\n",
     "            while dj == 0:\n",
+    "                P0 = np.eye(N)\n",
     "                i = j+1\n",
     "                while i < N-1:\n",
     "                    u[:,[i,i+1]] = u[:,[i+1,i]]\n",
+    "                    P0[:,[i,i+1]] = P0[:,[i+1,i]]\n",
     "                    i +=1\n",
+    "                Per = Per@P0\n",
     "                dj = np.linalg.det(u[:j+2,:j+2])\n",
     "            lam = np.eye(N)\n",
     "            gamma = u[j+1:, j] / u[j, j]\n",
@@ -287,24 +289,23 @@
     "\n",
     "            lam[j+1:, j] = gamma\n",
     "            L = L @ lam\n",
-    "    P = np.linalg.solve(L@u, a) # Can I use it or not?\n",
-    "    return L, u, P\n",
+    "    return L, u, Per\n",
     "\n",
     "\n",
     "L, u, P = diy_lu_mod(a)\n",
     "print(L, \"\\n\")\n",
     "print(u, \"\\n\")\n",
-    "print(P, \"\\n\")\n",
+    "print(P.T, \"\\n\")\n",
     "\n",
     "L1, u1, P1 = diy_lu_mod(a1)\n",
     "print(L1, \"\\n\")\n",
     "print(u1, \"\\n\")\n",
-    "print(P1, \"\\n\")"
+    "print(P1.T, \"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,33 +315,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "[[3.    3.    3.    3.    3.    3.   ]\n [3.    1.875 1.364 1.071 0.882 0.75 ]\n [3.    1.364 0.882 0.652 0.517 0.429]\n [3.    1.071 0.652 0.469 0.366 0.3  ]\n [3.    0.882 0.517 0.366 0.283 0.231]\n [3.    0.75  0.429 0.3   0.231 0.188]] \n [[ 0.000e+00 -4.441e-16  0.000e+00 -4.441e-16  8.882e-16  0.000e+00]\n [ 0.000e+00 -6.661e-16  2.220e-16  0.000e+00  2.220e-16  1.110e-16]\n [ 0.000e+00 -6.661e-16  2.220e-16  0.000e+00  2.220e-16  2.220e-16]\n [ 0.000e+00 -4.441e-16  0.000e+00  1.665e-16  6.661e-16  1.665e-16]\n [ 0.000e+00 -7.772e-16  3.331e-16  5.551e-17  1.665e-16 -5.551e-17]\n [ 0.000e+00 -7.772e-16  3.886e-16  1.110e-16  2.776e-16  0.000e+00]]\n"
+     "text": "[[3.    3.    3.    3.    3.    3.   ]\n [3.    1.875 1.364 1.071 0.882 0.75 ]\n [3.    1.364 0.882 0.652 0.517 0.429]\n [3.    1.071 0.652 0.469 0.366 0.3  ]\n [3.    0.882 0.517 0.366 0.283 0.231]\n [3.    0.75  0.429 0.3   0.231 0.188]] \n [[ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n [ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n [ 0.000e+00  0.000e+00  0.000e+00 -2.220e-16  1.110e-16  1.665e-16]\n [ 0.000e+00  0.000e+00 -2.220e-16  5.551e-17  1.665e-16  1.665e-16]\n [ 0.000e+00  0.000e+00  1.110e-16 -2.776e-16  2.776e-16 -5.551e-17]\n [ 0.000e+00  0.000e+00  1.665e-16  1.665e-16 -5.551e-17  0.000e+00]]\n"
     }
    ],
    "source": [
-    "a_ = going_back(L,u,P) # We didn't make permutation for this matrix\n",
+    "a_ = going_back(L, u, P.T)\n",
     "print(a_, \"\\n\", a - a_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "[[3.    3.    3.    3.    3.    3.   ]\n [3.    3.    1.364 1.071 0.882 0.75 ]\n [3.    1.364 0.882 0.652 0.517 0.429]\n [3.    1.071 0.652 0.469 0.366 0.3  ]\n [3.    0.882 0.517 0.366 0.283 0.231]\n [3.    0.75  0.429 0.3   0.231 0.188]] \n [[ 0.000e+00  0.000e+00  0.000e+00  0.000e+00 -4.441e-16  0.000e+00]\n [ 0.000e+00  0.000e+00 -4.441e-16 -4.441e-16 -1.110e-16 -3.331e-16]\n [ 0.000e+00 -2.220e-16 -4.441e-16 -7.772e-16  1.110e-16 -4.996e-16]\n [ 0.000e+00  0.000e+00 -6.661e-16 -4.996e-16  1.665e-16  5.551e-17]\n [ 0.000e+00  1.110e-16 -4.441e-16 -4.441e-16 -1.110e-16 -3.053e-16]\n [ 0.000e+00  0.000e+00 -3.331e-16 -4.441e-16 -2.776e-17 -2.498e-16]]\n"
+     "text": "[[3.    3.    3.    3.    3.    3.   ]\n [3.    3.    1.364 1.071 0.882 0.75 ]\n [3.    1.364 0.882 0.652 0.517 0.429]\n [3.    1.071 0.652 0.469 0.366 0.3  ]\n [3.    0.882 0.517 0.366 0.283 0.231]\n [3.    0.75  0.429 0.3   0.231 0.187]] \n [[ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n [ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n [ 0.000e+00  0.000e+00  0.000e+00 -2.220e-16  1.110e-16  1.665e-16]\n [ 0.000e+00  0.000e+00 -2.220e-16  5.551e-17  1.665e-16  1.665e-16]\n [ 0.000e+00  0.000e+00  1.110e-16  1.665e-16 -1.665e-16 -5.551e-17]\n [ 0.000e+00  0.000e+00  1.665e-16  1.665e-16 -5.551e-17  4.441e-16]]\n"
     }
    ],
    "source": [
-    "a1_ = going_back(L1, u1, P1)\n",
+    "a1_ = going_back(L1, u1, P1.T)\n",
     "print(a1_, \"\\n\", a1 - a1_)"
    ]
   },
