Week 3 and 4 work continued

--- a/week_4_iterative_linalg_Jacobi_Seidel_minres.ipynb
+++ b/week_4_iterative_linalg_Jacobi_Seidel_minres.ipynb
@@ -16,10 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 53,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -61,7 +59,7 @@
     "where \n",
     "\n",
     "$$\n",
-    "B = D^{-1} (A - D) \\qquad \\text{and} \\qquad c = D^{-1} b\n",
+    "B = D^{-1} (D - A) \\qquad \\text{and} \\qquad c = D^{-1} b\n",
     "$$\n"
    ]
   },
@@ -74,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,16 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "0.36436161983015336"
-      ]
+      "text/plain": "0.36436161983015336"
      },
-     "execution_count": 4,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,10 +141,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 57,
+   "metadata": {},
    "outputs": [],
    "source": [
     "n_iter = 50\n",
@@ -161,19 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([  1.11022302e-16,   1.11022302e-16,  -1.11022302e-16,\n",
-       "         0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "        -1.38777878e-17,   0.00000000e+00,   2.77555756e-17,\n",
-       "         1.11022302e-16])"
-      ]
+      "text/plain": "array([ 0.00000000e+00,  2.22044605e-16,  0.00000000e+00, -1.11022302e-16,\n        0.00000000e+00,  0.00000000e+00, -2.08166817e-17,  0.00000000e+00,\n        0.00000000e+00,  2.22044605e-16])"
      },
-     "execution_count": 6,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,13 +190,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 59,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# ... ENTER YOUR CODE HERE ..."
+    "def jacobi_iteration(a, b, x0, ni=50):\n",
+    "    '''Use the Jacobi iteration method\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    a : np.ndarray\n",
+    "        r.h.s. matrix.\n",
+    "    b : np.ndarray \n",
+    "        l.h.s. matrix.\n",
+    "    x0 : np.ndarray\n",
+    "        Initial answer array for Jacobi Iteration algorythm\n",
+    "    ni : integer\n",
+    "        The number of iterations to perform.\n",
+    "\n",
+    "    Returns\n",
+    "    ----------\n",
+    "    x : ndarray\n",
+    "        The solution of A @ x == b equation.\n",
+    "\n",
+    "    '''\n",
+    "    d_temp = np.diag(a)\n",
+    "    D = np.diag(d_temp)\n",
+    "    D_inverse = np.diag(1.0 / d_temp)\n",
+    "    B_temp = D.copy() - A.copy()\n",
+    "    B = D_inverse @ B_temp\n",
+    "    c = D_inverse @ b\n",
+    "    x = x0\n",
+    "    for _ in range(ni):\n",
+    "        x = B @ x + c\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([ 0.00000000e+00,  2.22044605e-16,  0.00000000e+00, -1.11022302e-16,\n        0.00000000e+00,  0.00000000e+00, -2.08166817e-17,  0.00000000e+00,\n        0.00000000e+00,  2.22044605e-16])"
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_j = jacobi_iteration(A, b, np.ones(n))\n",
+    "dif_j = A @ x_j - b\n",
+    "dif_j"
    ]
   },
   {
@@ -232,13 +268,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 61,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# ... ENTER YOUR CODE HERE ..."
+    "def seidels_iteration(a, b, x0, ni=50):\n",
+    "    '''Use the Seidel\\'s iteration method to solve a linear system of equations.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    a : np.ndarray\n",
+    "        r.h.s. matrix.\n",
+    "    b : np.ndarray \n",
+    "        l.h.s. matrix.\n",
+    "    x0 : np.ndarray\n",
+    "        Initial answer array for Jacobi Iteration algorythm\n",
+    "    ni : integer\n",
+    "        The number of iterations to perform.\n",
+    "\n",
+    "    Returns\n",
+    "    ----------\n",
+    "    x : ndarray\n",
+    "        The solution of A @ x == b equation.\n",
+    "\n",
+    "    '''\n",
+    "    L = np.tril(a)\n",
+    "    U = np.triu(a, 1)\n",
+    "    x = x0\n",
+    "    for _ in range(ni):\n",
+    "        x = np.linalg.inv(L) @ (b - U @ x)\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([ 0.00000000e+00,  1.11022302e-16, -1.11022302e-16, -1.11022302e-16,\n        0.00000000e+00,  0.00000000e+00, -1.38777878e-17,  1.11022302e-16,\n       -1.38777878e-17,  2.22044605e-16])"
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_s = seidels_iteration(A, b, np.ones(n))\n",
+    "dif_s = A @ x_s - b\n",
+    "dif_s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([ 0.00000000e+00,  1.11022302e-16, -1.11022302e-16,  0.00000000e+00,\n        0.00000000e+00,  0.00000000e+00,  6.93889390e-18, -1.11022302e-16,\n       -1.38777878e-17,  0.00000000e+00])"
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abs(dif_j) - abs(dif_s)"
    ]
   },
   {
@@ -261,14 +358,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 63,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# ... ENTER YOUR CODE HERE ..."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -287,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
