Week 1 HW Enhanced

--- a/week_1_LU_pivoting.ipynb
+++ b/week_1_LU_pivoting.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "6"
      },
-     "execution_count": 73,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,14 +137,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "6"
      },
-     "execution_count": 77,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,9 @@
     "    u = a.copy()    #   u is a copy of given matrix\n",
     "    L = np.eye(N)   #   L is an eye matrix\n",
     "    permutation_matrix = np.eye(N)  #   Initialization for permutation matrix\n",
+    "    \n",
     "    for j in range(N-1):\n",
+    "\n",
     "        max_index = np.abs(u[j, j:]).argmax() + j\n",
     "        temporary_matrix = np.eye(N)\n",
     "        temporary_matrix[j, j] = 0\n",
@@ -248,12 +250,11 @@
     "        temporary_matrix[max_index, j] = 1\n",
     "        permutation_matrix = np.dot(permutation_matrix, temporary_matrix)\n",
     "        u[:,[j, max_index]] = u[:, [max_index, j]]  #   Swap finished\n",
+    "\n",
     "        lam = np.eye(N) #   lam is the same as N\n",
     "        gamma = u[j+1:, j] / u[j, j]\n",
     "        lam[j+1:, j] = -gamma\n",
     "        u = lam @ u\n",
-    "        #print('Iteration number {}: \\n'.format(j))\n",
-    "        #print(u)\n",
     "\n",
     "        lam[j+1:, j] = gamma\n",
     "        L = L @ lam\n",
@@ -262,24 +263,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "[[1.    0.    0.    0.    0.    0.   ]\n [1.    1.    0.    0.    0.    0.   ]\n [1.    1.143 1.    0.    0.    0.   ]\n [1.    1.2   1.179 1.    0.    0.   ]\n [1.    1.231 1.294 1.605 1.    0.   ]\n [1.    1.25  1.375 2.007 2.076 1.   ]] \n\n[[ 3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00]\n [ 0.000e+00 -2.250e+00  0.000e+00 -1.636e+00 -1.929e+00 -2.118e+00]\n [ 0.000e+00  0.000e+00 -1.636e+00 -2.475e-01 -1.437e-01 -6.259e-02]\n [ 0.000e+00  2.220e-16  2.220e-16 -9.247e-02 -4.755e-02 -1.920e-02]\n [ 0.000e+00 -1.344e-16 -3.565e-16  0.000e+00  1.841e-03  1.181e-03]\n [ 0.000e+00 -1.667e-16  2.941e-16 -1.567e-17 -4.337e-19 -1.233e-05]] \n\n[[1. 0. 0. 0. 0. 0.]\n [0. 0. 1. 0. 0. 0.]\n [0. 0. 0. 1. 0. 0.]\n [0. 0. 0. 0. 1. 0.]\n [0. 0. 0. 0. 0. 1.]\n [0. 1. 0. 0. 0. 0.]] \n\n[[ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n [ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n [ 0.000e+00  0.000e+00 -2.220e-16  2.220e-16 -1.110e-16 -1.665e-16]\n [ 0.000e+00  0.000e+00  6.661e-16 -5.551e-17 -1.665e-16 -1.665e-16]\n [ 0.000e+00  0.000e+00 -1.110e-16 -1.665e-16  1.665e-16  5.551e-17]\n [ 0.000e+00  0.000e+00 -6.106e-16 -1.665e-16  5.551e-17  0.000e+00]]\n"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "L, u, p = diy_lu_piv(a1)\n",
+    "def recomp_lu(L, u, p=1):\n",
+    "    if (type(p) == int):\n",
+    "        p = np.eye(L.shape[0])\n",
+    "    return L @ u @ p.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy.testing import assert_allclose\n",
     "\n",
-    "print(L, \"\\n\")\n",
-    "print(u, \"\\n\")\n",
-    "print(p, '\\n')\n",
+    "L_a, u_a = diy_lu(a)\n",
+    "L_ae, u_ae, p_ae = diy_lu_piv(a)\n",
+    "L_a1, u_a1, p_a1 = diy_lu_piv(a1)\n",
     "\n",
-    "# Quick sanity check: L times U must equal the original matrix, up to floating-point errors.\n",
-    "print(L@u@p.T - a1)"
+    "assert_allclose(recomp_lu(L_a, u_a), a)\n",
+    "assert_allclose(recomp_lu(L_ae, u_ae, p_ae), a)\n",
+    "assert_allclose(recomp_lu(L_a1, u_a1, p_a1), a1)"
    ]
   },
   {
